syntax = "proto3";

package user;

message User {
  string id = 1;
  string fullname = 2;
  string username = 3;
  string email = 4;
  string password = 5;
  bool isVerified = 6;
  string bio = 7;
  string image_url = 8;
  string image_id = 9;
  string background_url = 10;
  string background_id = 11;
  string status = 12;
  string created_at = 13;
  string updated_at = 14;
}

message UserDatas {
  repeated User data = 1;
}

message UserData {
  User data = 1;
}

message MultipleUserParams {
  repeated string ids = 1;
}

message NoArguments {}

message UserParams {
  string id = 1;
}


service UserService {
  rpc GetMultipleUser(MultipleUserParams) returns (UserDatas) {}
  rpc Me(NoArguments) returns (UserData) {}
  rpc GetFollowingRecomendation(NoArguments) returns (UserDatas) {}
  rpc GetUserById(UserParams) returns (UserData) {}
}